http to https concerns

--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
-# DISABLE_ESLINT_PLUGIN=true 
+# DISABLE_ESLINT_PLUGIN=true
+
+# Enable HTTPS for development server
+HTTPS=true
+
+# Browser will automatically open to HTTPS when starting development server
+BROWSER=none
+
+# Force HTTPS redirect in production
+GENERATE_SOURCEMAP=false 
